[UPDATE] 解决spring-boot-configuration-processor不生成元数据json的问题